--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -18,14 +18,14 @@
         <div
             class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
             <div class="container">
-                <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p>
-                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-black">Gallery</h1>
+                <!-- <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p> -->
+                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Gallery</h1>
             </div>
         </div>
     </section>
     <section class="pt-10 pb-11 pb-lg-15">
         <div class="container">
-            <h2 class="fs-sm-40 mb-11 text-center">Our Gallery</h2>
+            <!-- <h2 class="fs-sm-40 mb-11 text-center">Our Gallery</h2> -->
             <div class="row">
 
                 {% for images in gallery %}
