--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -13,9 +13,9 @@
                         style="background-image: url('{% static 'web/images/matanah3.jpg' %}')">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <div class="container container-xxl">
-                                <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
                                     STEEL FURNITURE FACTORY</p>
-                                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">
+                                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
                                     CREATIVE DESIGNS</h1>
                                 <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
                                         class="btn btn-white text-uppercase letter-spacing-05 text-center"
@@ -33,10 +33,10 @@
                         style="background-image: url('{% static 'web/images/matanah4.jpg' %}')">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <div class="container container-xxl">
-                                <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
                                     MODERN
                                     STEEL FURNITURE</p>
-                                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">
+                                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
                                     TRUSTED
                                     QUALITY</h1>
                                 <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
@@ -55,9 +55,9 @@
                         style="background-image: url('{% static 'web/images/matanah5.jpg' %}')">
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <div class="container container-xxl">
-                                <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
                                     FURNITURE & ACCESSORIES</p>
-                                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">
+                                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
                                     CUSTOM
                                     MADE PRODUCTS</h1>
                                 <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
@@ -81,9 +81,9 @@
         <img class="d-block w-100 res-img" src="{% static 'web/images/cabinet1banner.jpg' %}" alt="First slide">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="container container-xxl banner-head ">
-                <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
                     STEEL FURNITURE FACTORY</p>
-                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">
+                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
                     CREATIVE DESIGNS</h1>
                 <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
                         class="btn btn-white text-uppercase letter-spacing-05 text-center"
@@ -97,10 +97,10 @@
         <img class="d-block w-100 res-img" src="{% static 'web/images/banner02m.jpg' %}" alt="Second slide">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="container container-xxl banner-head">
-                <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
                     MODERN
                     STEEL FURNITURE</p>
-                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">
+                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
                     TRUSTED
                     QUALITY</h1>
                 <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
@@ -112,12 +112,12 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 res-img" src="{% static 'web/images/matanah5.jpg' %}" alt="Third slide">
+        <img class="d-block w-100 res-img" src="{% static 'web/images/banner03.jpg' %}" alt="Third slide">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="container container-xxl banner-head">
-                <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
                     FURNITURE & ACCESSORIES</p>
-                <h1 class="mb-6 fs-60 fs-xxl-90 lh-1 text-black text-center" data-animate="fadeInUp">
+                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
                     CUSTOM
                     MADE PRODUCTS</h1>
                 <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
@@ -302,10 +302,10 @@
                         {% endcomment %}
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12 col-md-12 col-12">
                     <div class="card border-0 banner banner-07">
                         {% for ad in ad2 %}
-                        <div class="card-img bg-img-cover-center bgimg-size1" style="background-image: url({{ad.image.crop.613x613}})">
+                        <div class="card-img bg-img-cover-center bgimg-size1" style="background-image: url({{ad.image.url}})">
                         </div>
                         {% endfor %}
                             {% comment %}
