--- a/static/web/css/themes.css
+++ b/static/web/css/themes.css
@@ -9949,7 +9949,7 @@ button.bg-white:focus {
 }
 
 .vh-100 {
-    height: 100vh !important
+    height: 55vh !important
 }
 
 .m-0 {
@@ -10606,7 +10606,7 @@ button.bg-white:focus {
 
 .pt-8,
 .py-8 {
-    padding-top: 3.125rem !important
+    padding-top: 1.125rem !important
 }
 
 .pr-8,
@@ -10616,7 +10616,7 @@ button.bg-white:focus {
 
 .pb-8,
 .py-8 {
-    padding-bottom: 3.125rem !important
+    padding-bottom: 1.125rem !important
 }
 
 .pl-8,
@@ -18637,7 +18637,8 @@ a.text-white:focus {
 }
 
 .main-header .navbar-brand {
-    max-width: 177px
+    max-width: 177px;
+    text-align: center;
 }
 
 .main-header .normal-logo,
@@ -20954,7 +20955,8 @@ a.text-white:focus {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background: #c9c0bb;
+    background: #EDEDEC;
+    background-size: cover;
 }
 
 .overflow-x-auto {
@@ -25590,10 +25592,10 @@ button:focus {
     border: 1px solid #EDEDEC;
     background-color: #EDEDEC;
     margin: 0px 0px;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 .product-bg-sec{
-    margin: 10px 10px;
+    margin: 1px 1px;
 }
 .pdetail{
     margin: 0px 10px;
@@ -25616,13 +25618,16 @@ button:focus {
 
 @media only screen and (min-width:320px) and (max-width:567px){
     .product-bg{
-        border: 1px solid #C9C0BB;
-        background-color: #C9C0BB;
+        border: 1px solid #EDEDEC;
+        background-color: #EDEDEC;
         margin: 0px 0px;
-        border-radius: 10px;
+        border-radius: 4px;
+    }
+    .fs-3{
+        font-size: 25px !important;
     }
     .fs-60 {
-        font-size: 21px !important;
+        font-size: 39px !important;
     }
     .fs-20 {
         font-size: 11px !important;
@@ -25705,7 +25710,7 @@ button:focus {
         background-size: cover;
     }
     .banner-head{
-        margin-top: -122px;
+        margin-top: -149px;
     }
     .res-img{
         height: 215px;
@@ -25715,6 +25720,84 @@ button:focus {
     }
     .icon-size-ph{
         font-size: 22px !important;
+    }
+    .bgimg-size1 {
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+    }
+    .icon-size-wa{
+        width:7% ;
+    }
+    .icon-size-ph{
+        width:5.8% ;
+    }
+    .mb-8, .my-8 {
+        margin-bottom: 1.125rem !important;
+    }
+    .pb-11, .py-11 {
+        padding-bottom: 1rem !important;
+    }
+    .pb-10, .py-10 {
+        padding-bottom: 0.375rem !important;
+    }
+    .pt-11, .py-11 {
+        padding-top: 1rem !important;
+    }
+    .mb-9, .my-9 {
+        margin-bottom: 0.75rem !important;
+    }
+    .pb-8, .py-8 {
+        padding-bottom: 0.125rem !important;
+    }
+    .pt-10, .py-10 {
+        padding-top: 1.375rem !important;
+    }
+    .pb-9, .py-9 {
+        padding-bottom: 0.75rem !important;
+    }
+    .pt-13, .py-13 {
+        padding-top: 0.25rem !important;
+    }
+    .pb-13, .py-13 {
+        padding-bottom: 0.25rem !important;
+    }
+    .mb-10, .my-10 {
+        margin-bottom: 2.375rem !important;
+    }
+    .mb-7, .my-7 {
+        margin-bottom: 0.5rem !important;
+    }
+    .mb-11, .my-11 {
+        margin-bottom: 1rem !important;
+    }
+    .pb-14, .py-14 {
+        padding-bottom: 0.875rem !important;
+    }
+    .product-head {
+        color: #c02531;
+        margin-bottom: -6px;
+        font-size: 14px;
+    }
+    label {
+        display: inline-block;
+        margin-bottom: -0.5rem;
+        font-size: 11px;
+    }
+    .whats-link-2 {
+        position: fixed !important;
+        /* background-color: #2c709d; */
+        display: inline-block;
+        bottom: 12% !important;
+        right: -478px;
+        color: rgb(250, 250, 250) !important;
+        border-radius: 20px 0px 0 20px;
+        padding: 5px 5px;
+        font-size: 11px !important;
+    }
+    
+    .fs-30 {
+        font-size: 18px !important;
     }
 
 }
@@ -25728,17 +25811,26 @@ button:focus {
     .res-img{
         height: 215px;
     }
+    .icon-size-wa{
+        width:7% ;
+    }
+    .icon-size-ph{
+        width:5.8% ;
+    }
 }
 
 @media only screen and (min-width:568px) and (max-width:768px){
     .product-bg{
-        border: 1px solid #C9C0BB;
-        background-color: #C9C0BB;
+        border: 1px solid #EDEDEC;
+        background-color: #EDEDEC;
         margin: 0px 0px;
-        border-radius: 10px;
+        border-radius: 4px;
     }
     .fs-60 {
-        font-size: 42px !important;
+        font-size: 67px !important;
+    }
+    .fs-3{
+        font-size: 35px !important;
     }
     .fs-20 {
         font-size: 17px !important;
@@ -25795,6 +25887,23 @@ button:focus {
     .banner-head{
         margin-top: -285px;
     }
+    .bgimg-size1 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 52%;
+        
+    }
+    .icon-size-wa{
+        width:7% ;
+    }
+    .icon-size-ph{
+        width:5.8% ;
+    }
+    .bgimg-size1 {
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+    }
 
 }
 
@@ -25809,7 +25918,7 @@ button:focus {
     /* background-color:#c02531; */
     display: inline-block;
     bottom: 18%;
-    right: 0;
+    right: -474px;
     color: rgb(243, 243, 243) !important;
     border-radius: 20px 0px 0 20px;
     padding: 5px;
@@ -25820,16 +25929,10 @@ button:focus {
     position: fixed !important;
     /* background-color: #2c709d; */
     display: inline-block;
-    bottom: 11%;
-    right: 0;
+    bottom: 9%;
+    right: -478px;
     color: rgb(250, 250, 250) !important;
     border-radius: 20px 0px 0 20px;
     padding: 5px 5px;
     font-size: 11px !important;
-}
-.icon-size-wa{
-    font-size: 32px;
-}
-.icon-size-ph{
-    font-size: 28px;
 }
