--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -2,11 +2,12 @@
 {% load static %}
 {% block content %}
 <main id="content">
+
 <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/matanah2.jpg' %}');">
 <div class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
 <div class="container">
-<p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p>
-<h1 class="fs-60 fs-lg-90 lh-1 text-center text-black">About Us</h1>
+<!-- <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p> -->
+<h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">About Us</h1>
 </div>
 </div>
 </section>
