--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -7,15 +7,100 @@
         <div
             class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
             <div class="container">
-                <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p>
-                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-black">Product</h1>
+                <!-- <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p> -->
+                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Product</h1>
             </div>
         </div>
     </section>
     <section class="py-8 page-title border-top mt-1">
-        <div class="container">
+        <!-- <div class="container">
             <h1 class="fs-40 mb-1 text-capitalize text-center">Shop All</h1>
+        </div> -->
+         <!-- ====================================================== -->
+    <!-- Browse category in mob and tab -->
+    <div class="col-xl-3 d-lg-none">
+        <div class="dropdown no-caret mob-category-sec">
+            <a href="#"
+                class="btn1 dropdown-toggle btn-primary d-flex w-100 text-left align-items-center px-0 px-xl-4 border-0 shadow-none"
+                id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="toggle-bar"><span class="toggle-icon text-white"></span></div>
+                <div class="pl-5">Browse Categories</div>
+            </a>
+            <div class="dropdown-menu w-100 py-0 dropdown-pos" aria-labelledby="dropdownMenuButton1">
+
+                {% for categories in category %}
+                <a class="dropdown-item media align-items-center border-bottom py-2"
+                    href="/product/{{categories.slug}}">
+                    <!-- <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/chair.png' %}" alt="Chair"
+                            style="display:none;visibility:hidden;">
+                        <img src="{% static 'web/images/chair.png' %}" alt="Chair">
+                    </div> -->
+                    <div class="media-body ">{{categories.title}}</div>
+                </a>
+                {% endfor %}
+
+                {% comment %}
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/desk.png' %}" alt="Table"
+                            style="display:none;visibility:hidden;"><img src="{% static 'web/images/desk.png' %}"
+                            alt="Table">
+                    </div>
+                    <div class="media-body">Table
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/fish_bowl.png' %}" alt="Accessories"
+                            style="display:none;visibility:hidden;"><img src="{% static 'web/images/fish_bowl.png' %}"
+                            alt="Accessories">
+                    </div>
+                    <div class="media-body">Accessories
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/sofa.png' %}" alt="Sofa"
+                            style="display:none;visibility:hidden;"><img src="{% static 'web/images/sofa.png' %}"
+                            alt="Sofa">
+                    </div>
+                    <div class="media-body">Sofa
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/plant.png' %}" alt="Plants"
+                            style="display:none;visibility:hidden;"><img src="{% static 'web/images/plant.png' %}"
+                            alt="Plants">
+                    </div>
+                    <div class="media-body">Plants
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/stool.png' %}" alt="Stool"
+                            style="display:none;visibility:hidden;"><img src="{% static 'web/images/stool.png' %}"
+                            alt="Stool">
+                    </div>
+                    <div class="media-body">Stool
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/ladder.png' %}" alt="Stands"
+                            style="display:none;visibility:hidden;"><img src="{% static 'web/images/ladder.png' %}"
+                            alt="Stands">
+                    </div>
+                    <div class="media-body">Stands
+                    </div>
+                </a>
+                {% endcomment %}
+            </div>
         </div>
+    </div>
+    <!-- End of Browse category in mob and tab -->
+    <!-- ==================================================== -->
     </section>
     <section>
         {% comment %}
