--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -3,8 +3,8 @@
     <div class="container container-xxl">
     <div class="row">
     <div class="col-lg mb-6 mb-lg-0">
-    <a href="#" class="footer-logo d-block"><img data-cfsrc="{% static 'web/images/matanah.svg' %}" alt="Furnitor" style="display:none;visibility:hidden;">
-        <img src="{% static 'web/images/matanah.svg' %}" alt="Furnitor" style="width: 62%;"></a>
+    <a href="#" class="footer-logo d-block"><img data-cfsrc="{% static 'web/images/MATA.svg' %}" alt="Furnitor" style="display:none;visibility:hidden;">
+        <img src="{% static 'web/images/MATA.svg' %}" alt="Furnitor" style="width: 62%;" ></a>
     </div>
     <div class="col-sm-6 col-lg col-6  mb-6 mb-lg-0">
     <ul class="list-unstyled mb-0">
