--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -71,9 +71,9 @@
                                 window.__mirage2 = { petok: "12e352e4f6b313b98e034b60c2997d8f5a48034f-1655201252-1800" };
     //]]>
                             </script>
-                            <img data-cfsrc="{% static 'web/images/matanah.svg' %}" alt="Furnitor"
+                            <img data-cfsrc="{% static 'web/images/MATA.svg' %}" alt="Furnitor"
                                 style="display:none;visibility:hidden;">
-                            <img src="{% static 'web/images/matanah.svg' %}" alt="Furnitor" style="width:62% ;">
+                            <img src="{% static 'web/images/MATA.svg' %}" alt="Furnitor" style="width: 62%;" >
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4 social-pad">
@@ -453,9 +453,9 @@
                         <span class="fs-24 toggle-icon"></span>
                     </button>
                     <a class="navbar-brand d-inline-block mx-auto py-0" href="{% url 'web:index' %}">
-                        <img data-cfsrc="{% static 'web/images/matanah.svg' %}" alt="Furnitor"
+                        <img data-cfsrc="{% static 'web/images/MATA.svg' %}" alt="Furnitor"
                             style="display:none;visibility:hidden;">
-                        <img src="{% static 'web/images/matanah.svg' %}" alt="Furnitor" style="width:62% ;">
+                        <img src="{% static 'web/images/MATA.svg' %}" alt="Furnitor" style="width: 62%;"  >
                     </a>
                     <!-- <a href="#search-popup" data-gtf-mfp="true"
                         data-mfp-options='{"type":"inline","focus": "#keyword","mainClass": "mfp-search-form mfp-move-from-top mfp-align-top"}'
@@ -471,9 +471,9 @@
         <div class="pt-5 pb-7 card border-0 h-100">
             <div class="d-flex align-items-center card-header border-0 py-0 pl-8 pr-7 mb-9 bg-transparent">
                 <a href="#" class="d-block w-52px">
-                    <img data-cfsrc="{% static 'web/images/matanah.svg' %}" alt="Furnitor"
+                    <img data-cfsrc="{% static 'web/images/MATA.svg' %}" alt="Furnitor"
                         style="display:none;visibility:hidden;">
-                        <img src="{% static 'web/images/matanah.svg' %}" alt="Furnitor" style="width:62% ;">
+                        <img src="{% static 'web/images/MATA.svg' %}" alt="Furnitor"  style="width: 62%;"  >
                             
                 </a>
                 <span class="canvas-close d-inline-block text-right fs-24 ml-auto lh-1 text-primary"><i
