Products Adding, Banner change

--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main id="content">
 
-<section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/matanah2.jpg' %}');">
+<section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13" style="background-image: url('{% static 'web/images/matanahbanner.jpg' %}');">
 <div class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
 <div class="container">
 <!-- <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p> -->
@@ -39,7 +39,7 @@
 <h2 class="fs-30 fs-md-40 lh-15 mb-7 text-center">WHOLESALE MANUFACTURERS AND TRADERS OF STEEL FURNITURE</h2>
 <p class="fs-20 text-primary font-weight-500 mb-6 text-center">Real comfort, beauty and quality should reflect in every piece of furniture for your home’s desired beauty.</p>
 <p class="mb-0" style="text-align: justify;">We believe that the true beauty of any interior is the beauty of the furniture within it. Matanah is the leading manufacturer of a comprehensive range of quality Steel
-    furniture and supplier of steel bunk beds, Steel cabinets, Mattress pillows and
+    furniture and supplier of steel bunk beds, Steel cabinets, Mattressess , pillows and
     Blankets. The company was established in 1974 by Mr Abdul Rahman Abdul Azeez Abdulla Abalkhal. The company was born with his imagination and creativity, which is the ultimate reason behind the success and phenomenal growth of Matanah furniture. As of now, his son, Mr Abdul Majeed Abdul Rahman Abalkhail, plays a crucial role in managing the organization since the year 2000. Alkharj-Riyadh industrial area, Riyadh is Matanah's main furniture factory, which is fully equipped with state-of-the-art machinery throughout Saudi Arabia and the wider Middle East.</p>
 </div>
 </div>
