--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -14,7 +14,7 @@
 </div>
 </section> -->
     <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13"
-        style="background-image: url('{% static 'web/images/matanah2.jpg' %}');">
+        style="background-image: url('{% static 'web/images/matanahbanner.jpg' %}');">
         <div
             class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
             <div class="container">
