--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -3,12 +3,12 @@
 {% block content %}
 <main id="content">
     <section class="d-flex flex-column bg-img-cover-center vh-100 custom-height-sm pt-xxl-13"
-        style="background-image: url('{% static 'web/images/matanah2.jpg' %}');">
+        style="background-image: url('{% static 'web/images/matanahbanner.jpg' %}');">
         <div
             class="d-flex flex-column h-100 align-items-center justify-content-center justify-content-xxl-start pt-xxl-13">
             <div class="container">
                 <!-- <p class="text-center text-black fs-20 font-weight-bold mb-4">Matanah</p> -->
-                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Product</h1>
+                <h1 class="fs-60 fs-lg-90 lh-1 text-center text-white">Products</h1>
             </div>
         </div>
     </section>
