--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -235,7 +235,7 @@
 
 
 
-
+{% comment %}
     <section class="pb-11 pb-lg-15 pt-4">
         <div class="container">
             <h2 class="mb-8 text-center fs-30 fs-md-40">Featured Items</h2>
@@ -282,14 +282,63 @@
             </div>
         </div>
     </section>
-   
+{% endcomment %}
+
+
+<section class="pb-11 pb-lg-15 pt-4">
+    <div class="container">
+        <h2 class="mb-8 text-center fs-30 fs-md-40">Featured Items</h2>
+        <div class="row">
+
+            {% for products in products_featured %}
+
+            <div class="col-6 col-sm-6 col-md-3 col-lg-2 mb-6" data-animate="fadeInUp">
+                <div class="product-bg">
+
+                    <div class="card border-0 hover-change-content product product-bg-sec">
+                        <!-- <div style="background-image: url('{{products.image.url}}')"
+                            class="card-img ratio bg-img-cover-center ratio-1-1">
+                        </div> -->
+                        <a href="{{products.image.url}}">
+
+                            <img src="{{products.image.url}}" alt="" class="card-img ratio bg-img-cover-center"
+                                style="aspect-ratio: 1/1;">
+                        </a>
+
+                    </div>
+
+
+                    <div class="pdetail">
+                        <div>
+                            <p class="product-head">{{products.title}}</p>
+                        </div>
+                        <div></div>
+                        <label>{{products.category}}</label>
+
+
+
+                    </div>
+                </div>
+
+            </div>
+            {% endfor %}
+
+
+
+        </div>
+        <div class="text-center">
+            <a href="/product/all/" class="btn btn-outline-primary text-uppercase letter-spacing-05">Shop Now</a>
+        </div>
+    </div>
+</section>
+
     <section class="pb-10 pb-lg-15">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mb-6 mb-lg-0">
                     <div class="card border-0 banner banner-07">
-                        {% for ad in ad1 %}
-                        <div class="card-img bg-img-cover-center bgimg-size" style="background-image: url({{ad.image.crop.770x370}})">
+                        {% for ads in ad|slice:":1" %}
+                        <div class="card-img bg-img-cover-center bgimg-size" style="background-image: url({{ads.image.crop.770x370}})">
                         </div>
                         {% endfor %}
                             {% comment %}
@@ -304,8 +353,8 @@
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12 col-12">
                     <div class="card border-0 banner banner-07">
-                        {% for ad in ad2 %}
-                        <div class="card-img bg-img-cover-center bgimg-size1" style="background-image: url({{ad.image.url}})">
+                        {% for ads in ad|slice:"1:3" %}
+                        <div class="card-img bg-img-cover-center bgimg-size1" style="background-image: url({{ads.image.url}})">
                         </div>
                         {% endfor %}
                             {% comment %}
