bannerhead category wise,image resized to 600x600

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -77,7 +77,90 @@
 <!-- ======================================================================== -->
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="z-index: 100;">
     <div class="carousel-inner">
-      <div class="carousel-item active">
+        <div class="carousel-item active">
+            <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner2.jpg' %}" alt="Third slide">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="container container-xxl banner-head">
+                    <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                        CABINETS</p>
+                    <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
+                        DURABLE STEEL CABINETS</h1>
+                    <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
+                            class="btn btn-white text-uppercase letter-spacing-05 text-center"
+                            data-animate="fadeInUp">Shop
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner3.jpg' %}" alt="Third slide">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="container container-xxl banner-head">
+                    <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                        LOCKERS</p>
+                    <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
+                        STEEL LOCKERS TO ENSURE SAFETY</h1>
+                    <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
+                            class="btn btn-white text-uppercase letter-spacing-05 text-center"
+                            data-animate="fadeInUp">Shop
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner4.jpg' %}" alt="Third slide">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="container container-xxl banner-head">
+                    <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                        BEDS</p>
+                    <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
+                        STYLISH STEEL BEDS</h1>
+                    <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
+                            class="btn btn-white text-uppercase letter-spacing-05 text-center"
+                            data-animate="fadeInUp">Shop
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner.jpg' %}" alt="Third slide">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="container container-xxl banner-head">
+                    <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                        OFFICE FURNITURE</p>
+                    <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
+                        MADE FROM THE FINEST STEEL</h1>
+                    <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
+                            class="btn btn-white text-uppercase letter-spacing-05 text-center"
+                            data-animate="fadeInUp">Shop
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner1.jpg' %}" alt="Third slide">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="container container-xxl banner-head">
+                    <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
+                        STUDENT DESK</p>
+                    <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
+                        DESIGNED FOR SUCCESS</h1>
+                    <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
+                            class="btn btn-white text-uppercase letter-spacing-05 text-center"
+                            data-animate="fadeInUp">Shop
+                            Now</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+         
+      <div class="carousel-item ">
         <img class="d-block w-100 res-img" src="{% static 'web/images/cabinet1banner.jpg' %}" alt="First slide">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="container container-xxl banner-head ">
@@ -129,86 +212,10 @@
         </div>
       </div>
     
-      <div class="carousel-item">
-        <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner.jpg' %}" alt="Third slide">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <div class="container container-xxl banner-head">
-                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
-                    OFFICE FURNITURE</p>
-                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
-                    MADE FROM THE FINEST STEEL</h1>
-                <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
-                        class="btn btn-white text-uppercase letter-spacing-05 text-center"
-                        data-animate="fadeInUp">Shop
-                        Now</a>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner1.jpg' %}" alt="Third slide">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <div class="container container-xxl banner-head">
-                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
-                    STUDENT DESK</p>
-                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
-                    DESIGNED FOR SUCCESS</h1>
-                <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
-                        class="btn btn-white text-uppercase letter-spacing-05 text-center"
-                        data-animate="fadeInUp">Shop
-                        Now</a>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner2.jpg' %}" alt="Third slide">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <div class="container container-xxl banner-head">
-                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
-                    CABINETS</p>
-                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
-                    DURABLE STEEL CABINETS</h1>
-                <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
-                        class="btn btn-white text-uppercase letter-spacing-05 text-center"
-                        data-animate="fadeInUp">Shop
-                        Now</a>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner3.jpg' %}" alt="Third slide">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <div class="container container-xxl banner-head">
-                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
-                    LOCKERS</p>
-                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
-                    STEEL LOCKERS TO ENSURE SAFETY</h1>
-                <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
-                        class="btn btn-white text-uppercase letter-spacing-05 text-center"
-                        data-animate="fadeInUp">Shop
-                        Now</a>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 res-img" src="{% static 'web/images/mbanner4.jpg' %}" alt="Third slide">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <div class="container container-xxl banner-head">
-                <p class="text-white font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
-                    BEDS</p>
-                <h1 class="mb-6 fs-3 fs-xxl-90 lh-1 text-white text-center" data-animate="fadeInUp">
-                    STYLISH STEEL BEDS</h1>
-                <div class="text-center" data-animate="fadeInUp"><a href="/product/all/"
-                        class="btn btn-white text-uppercase letter-spacing-05 text-center"
-                        data-animate="fadeInUp">Shop
-                        Now</a>
-                </div>
-            </div>
-        </div>
-      </div>
+    
+    
+   
+    
       
       
     </div>
@@ -225,6 +232,7 @@
 
 
     <!-- ====================================================== -->
+    {% comment %}
     <!-- Browse category in mob and tab -->
     <div class="col-xl-3 d-lg-none">
         <div class="dropdown no-caret mob-category-sec">
@@ -248,7 +256,7 @@
                 </a>
                 {% endfor %}
 
-                {% comment %}
+               
                 <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
                     <div class="w-28px mr-3">
                         <img data-cfsrc="{% static 'web/images/desk.png' %}" alt="Table"
@@ -303,11 +311,12 @@
                     <div class="media-body">Stands
                     </div>
                 </a>
-                {% endcomment %}
+                
             </div>
         </div>
     </div>
     <!-- End of Browse category in mob and tab -->
+    {% endcomment %}
     <!-- ==================================================== -->
 
 
@@ -431,7 +440,7 @@
                         <!-- <div style="background-image: url('{{products.image.url}}')"
                             class="card-img ratio bg-img-cover-center ratio-1-1">
                         </div> -->
-                        <a href="{{categories.image.url}}">
+                        <a href="/product/{{categories.slug}}">
 
                             <img src="{{categories.image.url}}" alt="" class="card-img ratio bg-img-cover-center"
                                 style="aspect-ratio: 1/1;">
@@ -766,8 +775,7 @@
                 <h2 class="fs-30 fs-md-56 mb-3">WHOLESALE DEALERS OF STEEL FURNITURE</h2>
                 <p class="mb-7 font-weight-500">Matanah Furniture Factory is one of the finest customised furniture
                     manufacturing companies based in Riyadh, Saudi Arabia with branches in Jeddah as well.</p>
-                <a href="{% url 'web:about' %}" class="btn btn-outline-primary text-uppercase letter-spacing-05">our
-                    journal</a>
+                <a href="{% url 'web:about' %}" class="btn btn-outline-primary text-uppercase letter-spacing-05">More</a>
             </div>
         </div>
     </section>
